feat: add dotenv to the project

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "target": "es2016",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
     "module": "commonjs",                                /* Specify what module code is generated. */
-    "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
+    "rootDir": "./src",
+    "baseUrl": "./",                                      /* Specify the base directory to resolve non-relative module names. */
     // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
 
      "outDir": "./build",                                   /* Specify an output folder for all emitted files. */
