--- a/package.json
+++ b/package.json
@@ -5,18 +5,21 @@
   "main": "server.js",
   "scripts": {
     "start": "node build/server.js",
-    "dev": "ts-node server.ts",
-    "build": "tsc --outDir ./build"
+    "dev": "nodemon src/server.ts",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "express": "^4.18.1",
+    "nodemon": "^2.0.16",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "chalk": "^4.1.2"
+    "chalk": "^4.1.2",
+    "dotenv": "^16.0.1"
   }
 }
