--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
     "module": "commonjs",                                /* Specify what module code is generated. */
     "rootDir": "./src",
     "baseUrl": "./",                                      /* Specify the base directory to resolve non-relative module names. */
-    // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
+     "paths": {
+       "*": ["src/*"]
+     },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
 
      "outDir": "./build",                                   /* Specify an output folder for all emitted files. */
      "removeComments": true,                           /* Disable emitting comments. */
