--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.18.3",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/yamljs": "^0.2.31",
     "chalk": "^4.1.2",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "swagger-ui-express": "^4.4.0",
+    "yamljs": "^0.3.0"
   }
 }
