--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/core": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-typescript": "^7.17.12",
+    "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -29,6 +30,7 @@
     "@types/swagger-ui-express": "^4.1.3",
     "@types/yamljs": "^0.2.31",
     "chalk": "^4.1.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "swagger-ui-express": "^4.4.0",
     "yamljs": "^0.3.0"
