--- a/package.json
+++ b/package.json
@@ -19,10 +19,17 @@
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "concurrently": "^7.2.2",
-    "express": "^4.18.1",
+    "eslint": "^8.18.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.16",
+    "prettier": "2.7.1",
     "typescript": "^4.7.4"
   },
   "dependencies": {
@@ -32,6 +39,7 @@
     "chalk": "^4.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "swagger-ui-express": "^4.4.0",
     "yamljs": "^0.3.0"
   }
